# DSPi-Console-Linux

./: .gitignore
Documentation/: core_spec.md
core/: Cargo.toml  build.rs  cbindgen.toml
core/src/: commands.rs  device.rs  dsp_math.rs  lib.rs  preset.rs  protocol.rs  state.rs  types.rs  usb.rs
qt/: CMakeLists.txt  resources.qrc
qt/qml/: ChannelSettingsView.qml  CrossfeedWindow.qml  DashboardView.qml  FilterListView.qml  FilterResponseView.qml  LoudnessWindow.qml  MatrixMixerWindow.qml  SettingsWindow.qml  Sidebar.qml  StatsWindow.qml  Theme.qml  main.qml
qt/qml/components/: BorderlessComboBox.qml  ChannelRow.qml  CpuSection.qml  CustomSlider.qml  DashboardCard.qml  FilterRow.qml  GraphLegend.qml  MatrixPoint.qml  MeterBar.qml  ValueField.qml  qmldir
qt/src/: BodePlotItem.cpp  BodePlotItem.h  DSPiBridge.cpp  DSPiBridge.h  MeterItem.cpp  MeterItem.h  main.cpp
